# BYTEBONDS

./: Anchor.toml  README.md  package.json  pnpm-lock.yaml
app/: layout.tsx  page.tsx
app/actions/: repayment-actions.ts
app/api/bonds/freelancer/: route.ts
app/api/bytescore/: route.ts
app/api/debug-wallet/: route.ts
app/api/investments/: route.ts
app/freelancer/: page.tsx
app/investor/: page.tsx
components/: bonds-list.tsx  byte-score-card.tsx  byte-score.tsx  create-bond-form.tsx  dashboard-stats.tsx  installment-payment.tsx  investments-list.tsx  repayment-options.tsx  repayments-list.tsx  role-selector.tsx  wallet-multi-button.tsx  wallet-provider.tsx
components/ui/: card.tsx
idl/: bytebonds.json
lib/: account-utils.ts  bytescore.ts  program.ts  simplified-program.ts  user-role.ts  utils.ts
programs/bytebonds/: Cargo.toml
programs/bytebonds/src/: lib.rs
scripts/: deploy-devnet.sh  setup-devnet.sh
tests/: bytebonds.js
