[package]
name = "bytebonds"
version = "0.1.0"
description = "Income-backed bonds for freelancers on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bytebonds"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "1.16.0"
